--- a/src/App/Game/game.css
+++ b/src/App/Game/game.css
@@ -29,7 +29,7 @@ canvas {
     margin: 0 auto; /* center horizontally using margin */
   }
 
-.game-sidebar-container {
+.game-info-container {
     width: 40vw;
     height: auto;
     margin-left: 4vw;
@@ -105,9 +105,18 @@ canvas {
 
 .leaderboard {
     flex: 1 0 1;
-    background-color: greenyellow;
     width: 100%;
     height: 5em;
+    background-color: #040404;
+    margin-bottom: 2%;
+    color: gold;
+    border: 5px solid darkgoldenrod;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    overflow: hidden;
 }
 
 .game-header {
